added deadline to tasks and schedules; updated README
